--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="bs/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="bs/css/bootstrap.min.css">
 	<script src="bs/js/bootstrap.min.js"></script>
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title></title>
 	<script type="text/javascript">
 		for (lKey in ntMap) {
